/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.4.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'org.falconsteam'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'org.falconsteam.solarsystemexplorer.App'
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

run {
    jvmArgs = [
        '--add-opens', 'javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
        '--add-opens', 'javafx.graphics/com.sun.javafx.iio.jpeg=ALL-UNNAMED',
        '-Djava.net.useSystemProxies=true'
    ]
}